--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a queue for executing promises concurrently",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 300000"
   },
   "keywords": [
     "queue",
@@ -12,5 +12,9 @@
     "concurrent"
   ],
   "author": "Bob Brady",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.1.0"
+  }
 }
