--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.1.0"
+    "mocha": "^5.1.0",
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5"
   }
 }
