--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "promise-job-queue",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "a queue for executing promises concurrently",
   "main": "src/PromiseQueue.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "limit",
     "limited",
     "async",
-    "concurrency"
+    "concurrency",
     "concurrent",
     "ratelimit",
     "fifo"
